--- a/src/assets/css/CreatePost.css
+++ b/src/assets/css/CreatePost.css
@@ -1,13 +1,9 @@
-.post-container {
-    max-width: 600px;
+.post-containerr {
+    max-width: 50%;
     margin: 20px auto;
     padding: 20px;
-    border: 1px solid #ddd;
-    border-radius: 10px;
-    background: #fff;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   }
-  
+
   h2 {
     text-align: center;
     font-weight: bold;
@@ -61,7 +57,7 @@
     margin-top: 10px;
   }
   
-  ul {
+  /* ul {
     list-style: none;
     padding: 0;
     margin: 5px 0;
@@ -70,7 +66,7 @@
     max-height: 150px;
     overflow-y: auto;
     background: white;
-  }
+  } */
   
   ul li {
     padding: 8px;
@@ -184,4 +180,20 @@
 
 .btn-submit-post:hover {
   background-color: #050f31;
+}
+.progress-bar {
+  width: 100%;
+  background-color: #f3f3f3;
+  border-radius: 5px;
+  margin-top: 10px;
+}
+
+.progress-bar-fill {
+  height: 20px;
+  background-color: #4caf50;
+  color: white;
+  text-align: center;
+  line-height: 20px;
+  border-radius: 5px;
+  transition: width 0.5s;
 }
