--- a/src/assets/css/cn.css
+++ b/src/assets/css/cn.css
@@ -105,6 +105,11 @@
   border-radius: 8px;
   background: #f9f9f9;
   box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+}
+.post-card:hover{
+  transform: scale(1.05);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
 }
 
 .post-images {
@@ -119,3 +124,34 @@
   border-radius: 5px;
   object-fit: cover;
 }
+.avatar-wrapper {
+  position: relative;
+  width: 150px;
+  height: 150px;
+}
+.avatar-img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 50%;
+  border: 3px solid #ddd;
+}
+
+.change-avatar-btn {
+  position: absolute;
+  bottom: 10px; /* Đặt biểu tượng camera ở góc dưới */
+  right: 10px; /* Đặt biểu tượng camera ở góc phải */
+  background-color: rgba(0, 0, 0, 0.6); /* Nền bán trong suốt */
+  color: white;
+  padding: 5px;
+  border-radius: 50%;
+  cursor: pointer;
+  font-size: 18px;
+  transition: opacity 0.3s ease;
+  z-index: 1;
+}
+
+.avatar-wrapper:hover .change-avatar-btn {
+  opacity: 1; /* Hiển thị khi hover vào avatar */
+}
+
